preprocess pDeep simulated spectra files

--- a/notebooks/210330 Parallelized Data Filtering Pipeline.ipynb
+++ b/notebooks/210330 Parallelized Data Filtering Pipeline.ipynb
@@ -418,7 +418,7 @@
     "                col[modification_columns_dict[self.modification_location_suffix]]\n",
     "            ) - 1  # 1-indexed\n",
     "            modification_name = col[modification_columns_dict[self.modification_name_suffix]]\n",
-    "            col[PEPTIDE_SEQUENCE][modification_location] += f\"({modification_name})\"\n",
+    "            col[PEPTIDE_SEQUENCE][modification_location] += f\"({modification_name})\"  # in-place modification\n",
     "        return None\n",
     "\n",
     "def annotate_modifications(df: pd.DataFrame,\n",
@@ -536,13 +536,7 @@
       "INFO: Finished filtering '/scratch/mirko.krause/PXD010000/M_alcali_copp_CH4_B3_T1_11_QE_23Mar18_Oak_18-01-07_mzmlid.parquet' -> '/scratch/mirko.krause/dumps/PXD010000/training_columns/M_alcali_copp_CH4_B3_T1_11_QE_23Mar18_Oak_18-01-07_mzmlid.parquet'\n",
       "INFO: Finished filtering '/scratch/mirko.krause/PXD010000/Biodiversity_C_necator_R2A_aerobic_2_23Nov16_Pippin_16-09-11_mzmlid.parquet' -> '/scratch/mirko.krause/dumps/PXD010000/training_columns/Biodiversity_C_necator_R2A_aerobic_2_23Nov16_Pippin_16-09-11_mzmlid.parquet'\n",
       "INFO: Finished filtering '/scratch/mirko.krause/PXD010000/Biodiversity_B_thetaiotaomicron_Carb_01_26Aug15_Arwen_15-07-13_mzmlid.parquet' -> '/scratch/mirko.krause/dumps/PXD010000/training_columns/Biodiversity_B_thetaiotaomicron_Carb_01_26Aug15_Arwen_15-07-13_mzmlid.parquet'\n",
-      "INFO: Finished filtering '/scratch/mirko.krause/PXD010000/Biodiversity_M_xanthus_pellet_set2_3_13Jun16_Pippin_16-03-39_mzmlid.parquet' -> '/scratch/mirko.krause/dumps/PXD010000/training_columns/Biodiversity_M_xanthus_pellet_set2_3_13Jun16_Pippin_16-03-39_mzmlid.parquet'\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "INFO: Finished filtering '/scratch/mirko.krause/PXD010000/Biodiversity_M_xanthus_pellet_set2_3_13Jun16_Pippin_16-03-39_mzmlid.parquet' -> '/scratch/mirko.krause/dumps/PXD010000/training_columns/Biodiversity_M_xanthus_pellet_set2_3_13Jun16_Pippin_16-03-39_mzmlid.parquet'\n",
       "INFO: Finished filtering '/scratch/mirko.krause/PXD010000/Biodiversity_S_elongatus_BG11_aerobic_1_14July16_Pippin_16-05-01_mzmlid.parquet' -> '/scratch/mirko.krause/dumps/PXD010000/training_columns/Biodiversity_S_elongatus_BG11_aerobic_1_14July16_Pippin_16-05-01_mzmlid.parquet'\n",
       "INFO: Finished filtering '/scratch/mirko.krause/PXD010000/Biodiversity_S_elongatus_BG11NaCl_aerobic_2_05Oct16_Pippin_16-05-06_mzmlid.parquet' -> '/scratch/mirko.krause/dumps/PXD010000/training_columns/Biodiversity_S_elongatus_BG11NaCl_aerobic_2_05Oct16_Pippin_16-05-06_mzmlid.parquet'\n",
       "INFO: Finished filtering '/scratch/mirko.krause/PXD010000/M_alcali_copp_MeOH_B1_T2_02_QE_23Mar18_Oak_18-01-07_mzmlid.parquet' -> '/scratch/mirko.krause/dumps/PXD010000/training_columns/M_alcali_copp_MeOH_B1_T2_02_QE_23Mar18_Oak_18-01-07_mzmlid.parquet'\n",
@@ -608,13 +602,7 @@
       "INFO: Finished filtering '/scratch/mirko.krause/PXD010000/Biodiversity_Lactobacillus_casei_MRS_03_27Dec15_Arwen_15-07-13_mzmlid.parquet' -> '/scratch/mirko.krause/dumps/PXD010000/training_columns/Biodiversity_Lactobacillus_casei_MRS_03_27Dec15_Arwen_15-07-13_mzmlid.parquet'\n",
       "INFO: Finished filtering '/scratch/mirko.krause/PXD010000/Biodiversity_M_luteus_LIB_aerobic_03_26Feb16_Arwen_16-01-01_mzmlid.parquet' -> '/scratch/mirko.krause/dumps/PXD010000/training_columns/Biodiversity_M_luteus_LIB_aerobic_03_26Feb16_Arwen_16-01-01_mzmlid.parquet'\n",
       "INFO: Finished filtering '/scratch/mirko.krause/PXD010000/Biodiversity_B_subtilis_NCIB3610_plates_1_03May16_Samwise_16-03-32_mzmlid.parquet' -> '/scratch/mirko.krause/dumps/PXD010000/training_columns/Biodiversity_B_subtilis_NCIB3610_plates_1_03May16_Samwise_16-03-32_mzmlid.parquet'\n",
-      "INFO: Finished filtering '/scratch/mirko.krause/PXD010000/Biodiversity_B_thet_LB_anaerobic_01_01Feb16_Arwen_15-07-13_mzmlid.parquet' -> '/scratch/mirko.krause/dumps/PXD010000/training_columns/Biodiversity_B_thet_LB_anaerobic_01_01Feb16_Arwen_15-07-13_mzmlid.parquet'\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "INFO: Finished filtering '/scratch/mirko.krause/PXD010000/Biodiversity_B_thet_LB_anaerobic_01_01Feb16_Arwen_15-07-13_mzmlid.parquet' -> '/scratch/mirko.krause/dumps/PXD010000/training_columns/Biodiversity_B_thet_LB_anaerobic_01_01Feb16_Arwen_15-07-13_mzmlid.parquet'\n",
       "INFO: Finished filtering '/scratch/mirko.krause/PXD010000/Biodiversity_B_subtilis_NCIB3610_plates_2_03May16_Samwise_16-03-32_mzmlid.parquet' -> '/scratch/mirko.krause/dumps/PXD010000/training_columns/Biodiversity_B_subtilis_NCIB3610_plates_2_03May16_Samwise_16-03-32_mzmlid.parquet'\n",
       "INFO: Finished filtering '/scratch/mirko.krause/PXD010000/Biodiversity_R_palustris_PMnitro_anaerobic_3_01Jun16_Pippin_16-03-39_mzmlid.parquet' -> '/scratch/mirko.krause/dumps/PXD010000/training_columns/Biodiversity_R_palustris_PMnitro_anaerobic_3_01Jun16_Pippin_16-03-39_mzmlid.parquet'\n",
       "INFO: Finished filtering '/scratch/mirko.krause/PXD010000/QC_Shew_13_05_500ng_2_5hr_24Mar14_Samwise_13-07-17_mzmlid.parquet' -> '/scratch/mirko.krause/dumps/PXD010000/training_columns/QC_Shew_13_05_500ng_2_5hr_24Mar14_Samwise_13-07-17_mzmlid.parquet'\n",
@@ -679,13 +667,7 @@
       "INFO: Finished filtering '/scratch/mirko.krause/PXD010000/P_putida_17Nov15_1_21Mar16_Arwen_16-01-03_mzmlid.parquet' -> '/scratch/mirko.krause/dumps/PXD010000/training_columns/P_putida_17Nov15_1_21Mar16_Arwen_16-01-03_mzmlid.parquet'\n",
       "INFO: Finished filtering '/scratch/mirko.krause/PXD010000/Biodiversity_B_fragilis_CMgluc_anaerobic_01_01Feb16_Arwen_15-07-13_mzmlid.parquet' -> '/scratch/mirko.krause/dumps/PXD010000/training_columns/Biodiversity_B_fragilis_CMgluc_anaerobic_01_01Feb16_Arwen_15-07-13_mzmlid.parquet'\n",
       "INFO: Finished filtering '/scratch/mirko.krause/PXD010000/Biodiversity_M_xanthus_pellet_set2_1_13Jun16_Pippin_16-03-39_mzmlid.parquet' -> '/scratch/mirko.krause/dumps/PXD010000/training_columns/Biodiversity_M_xanthus_pellet_set2_1_13Jun16_Pippin_16-03-39_mzmlid.parquet'\n",
-      "INFO: Finished filtering '/scratch/mirko.krause/PXD010000/Biodiversity_D_acidovorans_TGY_aerobic_03_29Apr16_Samwise_16-03-32_renamed_mzmlid.parquet' -> '/scratch/mirko.krause/dumps/PXD010000/training_columns/Biodiversity_D_acidovorans_TGY_aerobic_03_29Apr16_Samwise_16-03-32_renamed_mzmlid.parquet'\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "INFO: Finished filtering '/scratch/mirko.krause/PXD010000/Biodiversity_D_acidovorans_TGY_aerobic_03_29Apr16_Samwise_16-03-32_renamed_mzmlid.parquet' -> '/scratch/mirko.krause/dumps/PXD010000/training_columns/Biodiversity_D_acidovorans_TGY_aerobic_03_29Apr16_Samwise_16-03-32_renamed_mzmlid.parquet'\n",
       "INFO: Finished filtering '/scratch/mirko.krause/PXD010000/Biodiversity_B_fragilis_LIB_anaerobic_03_01Feb16_Arwen_15-07-13_mzmlid.parquet' -> '/scratch/mirko.krause/dumps/PXD010000/training_columns/Biodiversity_B_fragilis_LIB_anaerobic_03_01Feb16_Arwen_15-07-13_mzmlid.parquet'\n",
       "INFO: Finished filtering '/scratch/mirko.krause/PXD010000/Biodiversity_R_palustris_PMnitro_anaerobic_1_01Jun16_Pippin_16-03-39_mzmlid.parquet' -> '/scratch/mirko.krause/dumps/PXD010000/training_columns/Biodiversity_R_palustris_PMnitro_anaerobic_1_01Jun16_Pippin_16-03-39_mzmlid.parquet'\n",
       "INFO: Finished filtering '/scratch/mirko.krause/PXD010000/Biodiversity_A_faecalis_LB_aerobic_02_26Feb16_Arwen_16-01-01_mzmlid.parquet' -> '/scratch/mirko.krause/dumps/PXD010000/training_columns/Biodiversity_A_faecalis_LB_aerobic_02_26Feb16_Arwen_16-01-01_mzmlid.parquet'\n",
@@ -750,13 +732,7 @@
       "INFO: Finished filtering '/scratch/mirko.krause/PXD010000/Biodiversity_M_smegmatis_BHI_aerobic_1_05Oct16_Pippin_16-05-06_mzmlid.parquet' -> '/scratch/mirko.krause/dumps/PXD010000/training_columns/Biodiversity_M_smegmatis_BHI_aerobic_1_05Oct16_Pippin_16-05-06_mzmlid.parquet'\n",
       "INFO: Finished filtering '/scratch/mirko.krause/PXD010000/Biodiversity_B_subtilis_NCIB3610_48h_plates_1_13Jun16_Pippin_16-03-39_mzmlid.parquet' -> '/scratch/mirko.krause/dumps/PXD010000/training_columns/Biodiversity_B_subtilis_NCIB3610_48h_plates_1_13Jun16_Pippin_16-03-39_mzmlid.parquet'\n",
       "INFO: Finished filtering '/scratch/mirko.krause/PXD010000/Biodiversity_B_fragilis_LB_anaerobic_02_01Feb16_Arwen_15-07-13_mzmlid.parquet' -> '/scratch/mirko.krause/dumps/PXD010000/training_columns/Biodiversity_B_fragilis_LB_anaerobic_02_01Feb16_Arwen_15-07-13_mzmlid.parquet'\n",
-      "INFO: Finished filtering '/scratch/mirko.krause/PXD010000/Biodiversity_C_comes_Glc_01_28Oct15_Arwen_15-07-13_mzmlid.parquet' -> '/scratch/mirko.krause/dumps/PXD010000/training_columns/Biodiversity_C_comes_Glc_01_28Oct15_Arwen_15-07-13_mzmlid.parquet'\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "INFO: Finished filtering '/scratch/mirko.krause/PXD010000/Biodiversity_C_comes_Glc_01_28Oct15_Arwen_15-07-13_mzmlid.parquet' -> '/scratch/mirko.krause/dumps/PXD010000/training_columns/Biodiversity_C_comes_Glc_01_28Oct15_Arwen_15-07-13_mzmlid.parquet'\n",
       "INFO: Finished filtering '/scratch/mirko.krause/PXD010000/Biodiversity_B_cereus_PN_L_CL_2_09Oct16_Pippin_16-05-06_mzmlid.parquet' -> '/scratch/mirko.krause/dumps/PXD010000/training_columns/Biodiversity_B_cereus_PN_L_CL_2_09Oct16_Pippin_16-05-06_mzmlid.parquet'\n",
       "INFO: Finished filtering '/scratch/mirko.krause/PXD010000/Biodiversity_B_subtilis_NCIB3610_24h_plates_1_13Jun16_Pippin_16-03-39_mzmlid.parquet' -> '/scratch/mirko.krause/dumps/PXD010000/training_columns/Biodiversity_B_subtilis_NCIB3610_24h_plates_1_13Jun16_Pippin_16-03-39_mzmlid.parquet'\n",
       "INFO: Finished filtering '/scratch/mirko.krause/PXD010000/Biodiversity_F_prausnitzii_LIB_01_28Oct15_Arwen_15-07-13_mzmlid.parquet' -> '/scratch/mirko.krause/dumps/PXD010000/training_columns/Biodiversity_F_prausnitzii_LIB_01_28Oct15_Arwen_15-07-13_mzmlid.parquet'\n",
@@ -5667,7 +5643,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -5681,7 +5657,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
