adapt notebooks to pdeep data

--- a/notebooks/210708 CNN-LSTM Model Training with Keras Tuner.ipynb
+++ b/notebooks/210708 CNN-LSTM Model Training with Keras Tuner.ipynb
@@ -470,9 +470,9 @@
    ],
    "source": [
     "element_spec = (\n",
-    "    tuple(tf.TensorSpec(shape=(PROCESSING_INFO['padding_lengths'][col], ), dtype=tf.float32)\n",
+    "    tuple(tf.TensorSpec(shape=(PROCESSING_INFO['padding_lengths'][col], ), dtype=tf.float32, name=col)\n",
     "     for col in PROCESSING_INFO['training_data_columns']),\n",
-    "    tuple(tf.TensorSpec(shape=(PROCESSING_INFO['padding_lengths'][col], ), dtype=tf.int8)\n",
+    "    tuple(tf.TensorSpec(shape=(PROCESSING_INFO['padding_lengths'][col], ), dtype=tf.int8, name=col)\n",
     "     for col in PROCESSING_INFO['target_data_columns'])\n",
     ")\n",
     "element_spec"
