add TF dataset benchmark visualized results

--- a/notebooks/210603 Tensorflow Dataset Introduction.ipynb
+++ b/notebooks/210603 Tensorflow Dataset Introduction.ipynb
@@ -18007,7 +18007,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results.to_csv('dataset_benchmark.csv')"
+    "results.to_csv('TF_dataset_benchmark_raw_results.csv')"
    ]
   },
   {
@@ -19504,7 +19504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 56,
    "id": "6a8feb0d",
    "metadata": {
     "scrolled": false
@@ -19545,12 +19545,18 @@
     "        )\n",
     "\n",
     "fig.tight_layout()\n",
+    "\n",
+    "plt.rcParams['svg.fonttype'] = 'none'\n",
+    "plt.savefig('TF_dataset_benchmark_horizontal.pdf')\n",
+    "plt.savefig('TF_dataset_benchmark_horizontal.png')\n",
+    "plt.savefig('TF_dataset_benchmark_horizontal.svg')\n",
+    "\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 57,
    "id": "13a0897a",
    "metadata": {
     "scrolled": false
@@ -19591,6 +19597,12 @@
     "        )\n",
     "\n",
     "fig.tight_layout()\n",
+    "\n",
+    "plt.rcParams['svg.fonttype'] = 'none'\n",
+    "plt.savefig('TF_dataset_benchmark_vertical.pdf')\n",
+    "plt.savefig('TF_dataset_benchmark_vertical.png')\n",
+    "plt.savefig('TF_dataset_benchmark_vertical.svg')\n",
+    "\n",
     "plt.show()"
    ]
   },
