match ML models with thesis diagrams

--- a/notebooks/210610_2 Dense Model Training.ipynb
+++ b/notebooks/210610_2 Dense Model Training.ipynb
@@ -486,15 +486,16 @@
     }
    ],
    "source": [
-    "x = masked_input_layers_list[0]\n",
-    "for input_layer in masked_input_layers_list[1:]:\n",
-    "    x = x + input_layer  # beware that this is addition and not stacking\n",
+    "x = tf.stack(\n",
+    "    values=masked_input_layers_list, \n",
+    "    axis=-1,\n",
+    ")\n",
     "\n",
     "x = tf.keras.layers.Flatten(name=\"flattened_masked_inputs\")(x)\n",
     "\n",
     "for _ in range(4):\n",
     "    x = tf.keras.layers.Dense(2**11)(x)\n",
-    "    x = tf.keras.layers.Dropout(0.1)(x)\n",
+    "    #x = tf.keras.layers.Dropout(0.1)(x)\n",
     "\n",
     "x = tf.keras.layers.Dense(PROCESSING_INFO['padding_lengths'][SEQ]*len(idx_to_char))(x)\n",
     "\n",
@@ -502,15 +503,86 @@
     "\n",
     "x = tf.keras.activations.softmax(x)\n",
     "\n",
-    "model = tf.keras.Model(inputs=input_layers_list, outputs=x, name='mmproteo')\n",
+    "model = tf.keras.Model(inputs=input_layers_list, outputs=x, name=f\"mmproteo_dense_{utils.get_current_time_str()}\")\n",
     "model.compile(optimizer=tf.keras.optimizers.Adam(),\n",
     "              loss=masked_loss,\n",
     "              metrics=[\n",
     "                  tf.keras.metrics.SparseCategoricalAccuracy(),\n",
     "                  tf.keras.metrics.SparseCategoricalCrossentropy()\n",
     "              ]\n",
-    "             )\n",
+    "             )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0733efe4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MODEL_PATH = os.path.join(DUMP_PATH, \"models\", model.name)\n",
+    "MODEL_PATH"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "780a890c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "utils.ensure_dir_exists(MODEL_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1535da5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf.keras.utils.plot_model(\n",
+    "    model=model,\n",
+    "    to_file=os.path.join(MODEL_PATH, \"model.png\"),\n",
+    "    show_shapes=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6584fb57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(os.path.join(MODEL_PATH, \"summary.txt\"), 'w') as file:\n",
+    "    def write_lines(line: str) -> None:\n",
+    "        file.write(line)\n",
+    "        file.write(\"\\n\")\n",
+    "    model.summary(print_fn=write_lines)\n",
     "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c43df6f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(os.path.join(MODEL_PATH, \"model.json\"), 'w') as file:\n",
+    "    file.write(model.to_json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87b3a6d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(os.path.join(MODEL_PATH, \"model.yaml\"), 'w') as file:\n",
+    "    file.write(model.to_yaml())"
    ]
   },
   {
