--- a/notebooks/210618 CNN-LSTM Model Training.ipynb
+++ b/notebooks/210618 CNN-LSTM Model Training.ipynb
@@ -909,10 +909,13 @@
     "        hidden_size=position_embedding_size,\n",
     "        name='relative_position_embedding'\n",
     "    )(x)\n",
-    "    position_embedding = tf.expand_dims(position_embedding, 0)\n",
+    "    position_embedding = tf.expand_dims(position_embedding, 0)  # add batch dimension\n",
     "    position_embedding = tf.broadcast_to(\n",
     "        input=position_embedding, \n",
-    "        shape=(tf.shape(x)[0], *tf.shape(position_embedding)[1:])\n",
+    "        shape=(\n",
+    "            tf.shape(x)[0],  # batch dimension\n",
+    "            *tf.shape(position_embedding)[1:]  # original position embedding dimensions\n",
+    "        )\n",
     "    )\n",
     "    \n",
     "    y_layers=[position_embedding]\n",
@@ -1877,7 +1880,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
